--- a/about.qmd
+++ b/about.qmd
@@ -1,13 +1,16 @@
 ---
 title: "About"
-image: profile.jpg
+image: p_photo.jpg
 about:
   template: jolla
   links:
     - icon: github
       text: Github
-      href: https://github.com/etc5523-2022
+      href: https://github.com/praj0022
+    - icon: linkedin 
+      text: Linkedin
+      href: https://www.linkedin.com/in/pooja-rajendran-raju-6245a2301/
 
 ---
 
-This is a blog template for the ETC5523 Communicating with Data assessment at Monash University.
+I am a current student at Monash University pursuing Masters in Business Analytics.
