--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "ETC5523 Blog Assessment"
+title: "Harnessing Analytics for a Better Tomorrow"
 listing:
   contents: posts
   sort: "date desc"
