--- a/about.qmd
+++ b/about.qmd
@@ -13,6 +13,9 @@ about:
    
 ---
 
+**<span style="font-size: 1.2em; color: #666;">Pooja Rajendran Raju</span>**
+
+
 I am currently pursuing a Master’s degree in Business Analytics at Monash University, where I am deepening my expertise in data analysis and statistical modeling. With a background in Android development, I previously worked at Zebra Technologies, developing data extraction applications that empowered enterprises to streamline their operations through robust mobile solutions.
 
 My passion lies in exploring mental health data due to its complex and unpredictable nature, which presents unique challenges and opportunities for discovery. I am particularly interested in leveraging advanced analytics and machine learning to uncover patterns that can enhance our understanding of mental health trends and interventions.
